# EMSDetect

./: .gitignore  Procfile  README.md  main.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-15-storage-report-platform.md
docs/superpowers/specs/: 2026-04-15-storage-report-platform-design.md
storage_identification/: cli.py  config.py
storage_identification/features/: __init__.py  basic_features.py  storage_features.py
storage_identification/io/: __init__.py  result_data_loader.py
storage_identification/pipeline/: meter_day_curve.py
storage_identification/reporting/: __init__.py  app.py  data_loader.py  main.py  models.py  settings.py
storage_identification/reporting/demo_data/demo-project/: enterprise_identification_base.csv
storage_identification/reporting/static/: report.css
storage_identification/reporting/templates/: base.html  enterprise_detail.html  methodology.html  project_list.html  project_overview.html  results.html
storage_identification/rollups/: __init__.py  cons_summary.py  meter_summary.py
tests/: conftest.py  test_basic_features.py  test_cli_pipeline.py  test_cons_summary.py  test_meter_day_curve.py  test_meter_summary.py  test_report_data_loader.py  test_report_entrypoint.py  test_report_routes.py  test_result_data_loader.py  test_storage_features.py
tests/fixtures/reporting/demo-project/: enterprise_identification_high_confidence.csv  enterprise_identification_manual_review.csv  project.json
