[project]
name = "storage-identification"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.2.0",
  "pandas>=2.2.0",
  "pyarrow>=18.0.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
storage-report = "storage_identification.reporting.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
